test/functions/generic/notGenericQ-return.chpl
record R { }

proc b() : R(?) {
  return new R();
}
b();
